fix text alignment, increase board size

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,11 @@
 .board-container {
   border: .7em dotted white;
   width: 70%;
-  height: 55%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items:center;
+  text-align: center;
 }
 
 h1 {
